Fix header and section nav on mobile (#45)

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,6 +31,6 @@ a {
 :target:before {
   content: '';
   display: block;
-  height: $header_height + 30px; /* fixed header height*/
-  margin: -($header_height + 30px) 0 0; /* negative fixed header height */
+  height: $header_height; /* fixed header height*/
+  margin: -($header_height - 50px) 0 0; /* negative fixed header height */
 }
